# makelaar-mcp

./: CLAUDE.md  FEATURES.md  LICENSE  README.md  pyproject.toml  test_mcp_live.py
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-03-09-phase1-dutch-mortgage-total-cost.md
src/makelaar_mcp/: server.py
tests/: test_server.py
